# kitchenai

./: .deepeval_telemtry.txt  .env.template  .gitignore  CHANGELOG.md  README.md  app.py  bentos.json  client_playground.ipynb  docker-compose.dev.yml  docker-compose.linux.yml  docker-compose.playground.yml  docker-compose.yml  justfile  playground.ipynb  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
apps-community/kitchenai-app-kitchenai-playground/: README.md  pyproject.toml
bento/: apps.py
bento-community/kitchenai-bento-llama-index-starter/: bento_playground.ipynb
bento-community/kitchenai-bento-rag-simple/: pyproject.toml
bento-community/polyglot-rag/: llama-index-simple.py  llama-index.py
config/: nats-playground.conf
config/caddy/: Caddyfile
deploy/: Dockerfile
deploy/linux/: kitchenai-dev-qcluster.service  kitchenai-dev.service
development-kit/: development-kit.ipynb
docs/: README.md  requirements.txt
kitchenai/: .dockerignore  .pre-commit-config.yaml  README.md  __main__.py  api.py  asgi.py  conftest.py  context_processors.py  exceptions.py  justfile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  settings.py  urls.py
kitchenai-bento-box/: pyproject.toml
kitchenai-community/: pyproject.toml
kitchenai-sdk/tests/: test_kitchen_app.py
kitchenai/apps/: README.md  apps.py  urls.py  utils.py
kitchenai/bento/: admin.py  bento_config.py  manager.py  models.py  types.py
kitchenai/cli/: cook.py  main.py
kitchenai/core/: activities.py  adapters.py  admin.py  agents.py  api.py  apps.py  models.py  (+9 more)
scripts/: install-bundle.sh
whisk/: README.md  pyproject.toml
whisk/examples/: llama-index.py
whisk/examples/large_project/: main.py
whisk/whisk/: cli.py  client.py  config.py
whisk/whisk/examples/: app.py
whisk/whisk/kitchenai_sdk/: base.py  kitchenai.py  nats_schema.py  schema.py
whisk/whisk/kitchenai_sdk/taxonomy/: query.py
(+182 files in other folders)
