[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitchenai-bento-box"
dynamic = ["version"]
description = "KitchenAI Bento Box Client"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["kitchenai", "nats", "client"]
dependencies = [
    "typer>=0.9.0",
    "faststream[nats]>=0.4.5",
    "rich>=13.7.0",
]

[project.scripts]
bentobox = "kitchenai_bento_box.cli:app"

[tool.hatch.version]
path = "kitchenai_bento_box/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
] 